2008-12-28  Cosimo Cecchi  <cosimoc@gnome.org>

	* logview-manager.c (create_log_cb): remove the use of an unallocated
	pointer, which would lead to segfaults.
	Patch by Frederic Peters (#565827).

2008-12-24  Cosimo Cecchi  <cosimoc@gnome.org>

	* logview-log.c (log_load):
	* logview-log.h:
	Set a meaningful error message if we can't read from the log file
	(#349756).

2008-12-23  Cosimo Cecchi  <cosimoc@gnome.org>

	* logview-window.c: handle keypad shortcuts (#441564).

2008-12-23  Cosimo Cecchi  <cosimoc@gnome.org>

	* data/gnome-system-log.desktop.in.in: rename the menu item to read
	a more descriptive "Log File Viewer". Thanks to Calum Benson (#375684).

2008-12-23  Cosimo Cecchi  <cosimoc@gnome.org>

	* logview-window.c: restore the saved zoom size on open (#330113).
