@@ -1,3 +1,10 @@
+2009-01-08  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* Makefile.am:
+	* data/Makefile.am:
+	* tests/test-reader.c:
+	Fix make distcheck.
+
 2008-12-28  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* logview-manager.c (create_log_cb): remove the use of an unallocated
